--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Unofficial HLTV Crawler",
   "main": "app.js",
   "dependencies": {
-    "hltv": "^2.17.2"
+    "babel-runtime": "^6.26.0",
+    "hltv": "^2.17.2",
+    "pandas-js": "^0.2.4"
   },
   "devDependencies": {},
   "scripts": {
