--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "chalk": "^3.0.0",
     "hltv": "^2.17.2",
     "pandas-js": "^0.2.4"
   },
