--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-runtime": "^6.26.0",
     "chalk": "^3.0.0",
     "hltv": "^2.17.2",
+    "moment": "^2.24.0",
     "pandas-js": "^0.2.4"
   },
   "devDependencies": {},
